--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,17 @@ android {
 }
 
 dependencies {
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    //RV
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    // For control over item selection of both touch and mouse driven selection
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc01"
+    //
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.amitshekhar.android:android-networking:1.0.2'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.1.0'
