--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.wisnu11rpl12019">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -11,8 +14,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DataAdapter"></activity>
+        <activity android:name=".DetailFavourite"></activity>
+        <activity android:name=".DetailMovie" />
         <activity android:name=".ListData" />
+        <activity android:name=".ListDataFavourite" />
         <activity android:name=".ControlClass">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
